@@ -4,6 +4,7 @@ Revision history for POE-Quickie
     - Shutdown properly when connected to a server which we've failed to log
       into. Depend on POE::Component::IRC 6.36 for this.
     - Allow a default server again
+    - Fix an error which was causing some plugins to fail to load
 
 0.12  Sat Jul 24 21:34:01 GMT 2010
     - Exit after --version
